--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "pm2": "pm2 start ./bin/www",
     "dev": "NODE_ENV=development nodemon ./bin/www",
     "lint:fix": "eslint --fix.",
     "pre-commit": "lint-staged"
